# FlClash

./: .gitignore  CLAUDE.md  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: build.yaml
arb/: intl_en.arb  intl_ja.arb  intl_ru.arb  intl_zh_CN.arb
core/: common.go  hub.go  server.go  server_dial_other.go  server_windows.go
lib/: application.dart  controller.dart  state.dart
lib/common/: cache.dart  common.dart  constant.dart  context.dart  http.dart  indexing.dart  iterable.dart  measure.dart  navigator.dart  num.dart  pipe_server.dart  print.dart  request.dart  snowflake.dart  string.dart  system.dart  task.dart  tray.dart  utils.dart  window.dart
lib/core/: controller.dart  core_transport.dart  interface.dart  lib.dart  service.dart  transport.dart
lib/database/: database.dart  groups.dart  icons.dart  rules.dart
lib/enum/: enum.dart
lib/l10n/: l10n.dart
lib/manager/: app_manager.dart  core_manager.dart  hotkey_manager.dart  tile_manager.dart  tray_manager.dart  vpn_manager.dart  window_manager.dart
lib/models/: clash_config.dart  common.dart  config.dart  profile.dart  selector.dart
lib/pages/: editor.dart  home.dart  scan.dart
lib/plugins/: app.dart
lib/providers/: action.dart  app.dart  config.dart  database.dart  providers.dart  state.dart
lib/views/: about.dart  access.dart  application_setting.dart  backup_and_restore.dart  developer.dart  logs.dart  resources.dart  (+2 more)
plugins/wifi/windows/: CMakeLists.txt  wifi_plugin.cpp  wifi_plugin.h  wifi_plugin_c_api.cpp
plugins/wifi/windows/include/wifi/: wifi_plugin_c_api.h
(+89 files in other folders)
